hphp/test/slow/hhbbc/uninstantiable-tc.php.expectf
Fatal error: A cannot implement B - it is not an interface in %s/uninstantiable-tc.php on line 5
